Added functionality to query items with a barcode
